==> vedderb/vesc_bms_fw/ChibiOS_20.3.4/community/os/hal/ports/GD/GD32VF103/I2C/hal_i2c_lld.c <==
#include "hal.h"
#define I2C0_RX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C0_RX_DMA_STREAM,                        \
                       GD32_I2C0_RX_DMA_CHN)
#define I2C0_TX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C0_TX_DMA_STREAM,                        \
                       GD32_I2C0_TX_DMA_CHN)
#define I2C1_RX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C1_RX_DMA_STREAM,                        \
                       GD32_I2C1_RX_DMA_CHN)
#define I2C1_TX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C1_TX_DMA_STREAM,                        \
                       GD32_I2C1_TX_DMA_CHN)
#define I2C_EV5_MASTER_MODE_SELECT                                          \
  ((uint32_t)(((I2C_STAT1_MASTER | I2C_STAT1_I2CBSY) << 16) | I2C_STAT0_SBSEND))
#define I2C_EV5_MASTER_MODE_SELECT_NO_BUSY                                  \
  ((uint32_t)((I2C_STAT1_MASTER << 16) | I2C_STAT0_SBSEND))
#define I2C_EV6_MASTER_TRA_MODE_SELECTED                                    \
  ((uint32_t)(((I2C_STAT1_MASTER | I2C_STAT1_I2CBSY | I2C_STAT1_TR) << 16) |          \
              I2C_STAT0_ADDSEND | I2C_STAT0_TBE))
#define I2C_EV6_MASTER_REC_MODE_SELECTED                                    \
  ((uint32_t)(((I2C_STAT1_MASTER | I2C_STAT1_I2CBSY)<< 16) | I2C_STAT0_ADDSEND))

static void i2c_lld_abort_operation(I2CDriver *i2cp) {
  I2C_TypeDef *dp = i2cp->i2c;

  /* Stops the I2C peripheral.*/
  dp->CTL0 = I2C_CTL0_SRESET;
  dp->CTL0 = 0;
  dp->CTL1 = 0;
  dp->STAT0 = 0;

  /* Stops the associated DMA streams.*/
  dmaStreamDisable(i2cp->dmatx);
  dmaStreamDisable(i2cp->dmarx);
}

static void i2c_lld_serve_event_interrupt(I2CDriver *i2cp) {
   I2C_TypeDef *dp = i2cp->i2c;
   uint32_t regSTAT1 = dp->STAT1;
   uint32_t event = dp->STAT0;

  /* Interrupts are disabled just before dmaStreamEnable() because there
     is no need of interrupts until next transaction begin. All the work is
     done by the DMA.*/
  switch (I2C_EV_MASK & (event | (regSTAT1 << 16))) {
  case I2C_EV5_MASTER_MODE_SELECT:
  case I2C_EV5_MASTER_MODE_SELECT_NO_BUSY:
    if ((i2cp->addr >> 8) > 0) {
      /* 10-bit address: 1 1 1 1 0 X X R/W */
      dp->DATA = 0xF0 | (0x6 & (i2cp->addr >> 8)) | (0x1 & i2cp->addr);
    } else {
      dp->DATA = i2cp->addr;
    }
    break;
  case I2C_EV9_MASTER_ADD10:
    /* Set second addr byte (10-bit addressing)*/
    dp->DATA = (0xFF & (i2cp->addr >> 1));
    break;
  case I2C_EV6_MASTER_REC_MODE_SELECTED:
    dp->CTL1 &= ~I2C_CTL1_EVIE;
	  /* Clear address flags before dma enable */
    (void)dp->STAT0;
    (void)dp->STAT1;
    dmaStreamEnable(i2cp->dmarx);
    dp->CTL1 |= I2C_CTL1_DMALST;                 /* Needed in receiver mode. */
    if (dmaStreamGetTransactionSize(i2cp->dmarx) < 2)
      dp->CTL0 &= ~I2C_CTL0_ACKEN;
    break;
  case I2C_EV6_MASTER_TRA_MODE_SELECTED:
    dp->CTL1 &= ~I2C_CTL1_EVIE;
    /* Clear address flags before dma enable */
    (void)dp->STAT0;
    (void)dp->STAT1;
    dmaStreamEnable(i2cp->dmatx);
    break;
  case I2C_EV8_2_MASTER_BYTE_TRANSMITTED:
    /* Catches BTF event after the end of transmission.*/
    (void)dp->DATA; /* clear BTF.*/
    if (dmaStreamGetTransactionSize(i2cp->dmarx) > 0) {
      /* Starts "read after write" operation, LSB = 1 -> receive.*/
      i2cp->addr |= 0x01;
      dp->CTL0 |= I2C_CTL0_START | I2C_CTL0_ACKEN;
      return;
    }
    dp->CTL1 &= ~I2C_CTL1_EVIE;
    dp->CTL0 |= I2C_CTL0_STOP;
    _i2c_wakeup_isr(i2cp);
    break;
  default:
    break;
  }
  if (event & (I2C_STAT0_ADDSEND | I2C_STAT0_ADD10SEND)){
    (void)dp->STAT0;
    (void)dp->STAT1;
  }

  /* Errata 2.4.6 for STM32F40x, Spurious Bus Error detection in Master mode.*/
  if (event & I2C_STAT0_BERR) {
    dp->STAT0 &= ~I2C_STAT0_BERR;
  }
}

void i2c_lld_init(void) {

#if GD32_I2C_USE_I2C0
  i2cObjectInit(&I2CD1);
  I2CD1.thread = NULL;
  I2CD1.i2c    = I2C0;
  I2CD1.dmarx  = NULL;
  I2CD1.dmatx  = NULL;
#endif /* GD32_I2C_USE_I2C0 */

#if GD32_I2C_USE_I2C1
  i2cObjectInit(&I2CD2);
  I2CD2.thread = NULL;
  I2CD2.i2c    = I2C1;
  I2CD2.dmarx  = NULL;
  I2CD2.dmatx  = NULL;
#endif /* GD32_I2C_USE_I2C1 */
}

void i2c_lld_start(I2CDriver *i2cp) {
  I2C_TypeDef *dp = i2cp->i2c;

  /* If in stopped state then enables the I2C and DMA clocks.*/
  if (i2cp->state == I2C_STOP) {

    i2cp->txdmamode = GD32_DMA_CTL_PWIDTH_BYTE | GD32_DMA_CTL_MWIDTH_BYTE |
                      GD32_DMA_CTL_MNAGA       | 
                      GD32_DMA_CTL_ERRIE       | GD32_DMA_CTL_FTFIE |
                      GD32_DMA_CTL_DIR_M2P;
    i2cp->rxdmamode = GD32_DMA_CTL_PWIDTH_BYTE | GD32_DMA_CTL_MWIDTH_BYTE |
                      GD32_DMA_CTL_MNAGA       | 
                      GD32_DMA_CTL_ERRIE       | GD32_DMA_CTL_FTFIE |
                      GD32_DMA_CTL_DIR_P2M;

#if GD32_I2C_USE_I2C0
    if (&I2CD1 == i2cp) {
      rcuResetI2C0();

      i2cp->dmarx = dmaStreamAllocI(GD32_I2C_I2C0_RX_DMA_STREAM,
                                    GD32_I2C_I2C0_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_rx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmarx != NULL, "unable to allocate stream");
      i2cp->dmatx = dmaStreamAllocI(GD32_I2C_I2C0_TX_DMA_STREAM,
                                    GD32_I2C_I2C0_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_tx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmatx != NULL, "unable to allocate stream");

      rcuEnableI2C0(true);
      eclicEnableVector(I2C0_EV_IRQn, GD32_I2C_I2C0_IRQ_PRIORITY, GD32_I2C_I2C0_IRQ_TRIGGER);
      eclicEnableVector(I2C0_ER_IRQn, GD32_I2C_I2C0_IRQ_PRIORITY, GD32_I2C_I2C0_IRQ_TRIGGER);

      i2cp->rxdmamode |= GD32_DMA_CTL_CHSEL(I2C0_RX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C0_DMA_PRIORITY);
      i2cp->txdmamode |= GD32_DMA_CTL_CHSEL(I2C0_TX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C0_DMA_PRIORITY);
    }
#endif /* GD32_I2C_USE_I2C0 */

#if GD32_I2C_USE_I2C1
    if (&I2CD2 == i2cp) {
      rcuResetI2C1();

      i2cp->dmarx = dmaStreamAllocI(GD32_I2C_I2C1_RX_DMA_STREAM,
                                    GD32_I2C_I2C1_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_rx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmarx != NULL, "unable to allocate stream");
      i2cp->dmatx = dmaStreamAllocI(GD32_I2C_I2C1_TX_DMA_STREAM,
                                    GD32_I2C_I2C1_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_tx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmatx != NULL, "unable to allocate stream");

      rcuEnableI2C1(true);
      eclicEnableVector(I2C0_EV_IRQn, GD32_I2C_I2C1_IRQ_PRIORITY, GD32_I2C_I2C1_IRQ_TRIGGER);
      eclicEnableVector(I2C0_ER_IRQn, GD32_I2C_I2C1_IRQ_PRIORITY, GD32_I2C_I2C1_IRQ_TRIGGER);

      i2cp->rxdmamode |= GD32_DMA_CTL_CHSEL(I2C1_RX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C1_DMA_PRIORITY);
      i2cp->txdmamode |= GD32_DMA_CTL_CHSEL(I2C1_TX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C1_DMA_PRIORITY);
    }
#endif /* GD32_I2C_USE_I2C1 */
  }

  /* I2C registers pointed by the DMA.*/
  dmaStreamSetPeripheral(i2cp->dmarx, &dp->DATA);
  dmaStreamSetPeripheral(i2cp->dmatx, &dp->DATA);

  /* Reset i2c peripheral.*/
  dp->CTL0 = I2C_CTL0_SRESET;
  dp->CTL0 = 0;
  dp->CTL1 = I2C_CTL1_ERRIE | I2C_CTL1_DMAON;
  /* Setup I2C parameters.*/
  i2c_lld_set_clock(i2cp);
  i2c_lld_set_opmode(i2cp);

  /* Ready to go.*/
  dp->CTL0 |= I2C_CTL0_I2CEN;
}

void i2c_lld_stop(I2CDriver *i2cp) {

  /* If not in stopped state then disables the I2C clock.*/
  if (i2cp->state != I2C_STOP) {

    /* I2C disable.*/
    i2c_lld_abort_operation(i2cp);
    dmaStreamFreeI(i2cp->dmatx);
    dmaStreamFreeI(i2cp->dmarx);
    i2cp->dmatx = NULL;
    i2cp->dmarx = NULL;

#if GD32_I2C_USE_I2C0
    if (&I2CD1 == i2cp) {
      eclicDisableVector(I2C0_EV_IRQn);
      eclicDisableVector(I2C0_ER_IRQn);
      rcuDisableI2C0();
    }
#endif

#if GD32_I2C_USE_I2C1
    if (&I2CD2 == i2cp) {
      eclicDisableVector(I2C1_EV_IRQn);
      eclicDisableVector(I2C1_ER_IRQn);
      rcuDisableI2C1();
    }
#endif
  }
}

msg_t i2c_lld_master_receive_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                     uint8_t *rxbuf, size_t rxbytes,
                                     sysinterval_t timeout) {
  I2C_TypeDef *dp = i2cp->i2c;
  systime_t start, end;
  msg_t msg;

  /* Resetting error flags for this transfer.*/
  i2cp->errors = I2C_NO_ERROR;

  /* Initializes driver fields, LSB = 1 -> receive.*/
  i2cp->addr = (addr << 1) | 0x01;

  /* Releases the lock from high level driver.*/
  osalSysUnlock();

  /* RX DMA setup.*/
  dmaStreamSetMode(i2cp->dmarx, i2cp->rxdmamode);
  dmaStreamSetMemory0(i2cp->dmarx, rxbuf);
  dmaStreamSetTransactionSize(i2cp->dmarx, rxbytes);

  /* Calculating the time window for the timeout on the busy bus condition.*/
  start = osalOsGetSystemTimeX();
  end = osalTimeAddX(start, OSAL_MS2I(GD32_I2C_BUSY_TIMEOUT));

  /* Waits until BUSY flag is reset or, alternatively, for a timeout
     condition.*/
  while (true) {
    osalSysLock();

    /* If the bus is not busy then the operation can continue, note, the
       loop is exited in the locked state.*/
    if (!(dp->STAT1 & I2C_STAT1_I2CBSY) && !(dp->CTL0 & I2C_CTL0_STOP))
      break;

    /* If the system time went outside the allowed window then a timeout
       condition is returned.*/
    if (!osalTimeIsInRangeX(osalOsGetSystemTimeX(), start, end)) {
      dmaStreamDisable(i2cp->dmarx);
      return MSG_TIMEOUT;
    }

    osalSysUnlock();
  }

  /* Starts the operation.*/
  dp->CTL1 |= I2C_CTL1_EVIE;
  dp->CTL0 |= I2C_CTL0_START | I2C_CTL0_ACKEN;

  /* Waits for the operation completion or a timeout.*/
  msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
  if (msg != MSG_OK) {
    dmaStreamDisable(i2cp->dmarx);
  }

  return msg;
}

msg_t i2c_lld_master_transmit_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      sysinterval_t timeout) {
  I2C_TypeDef *dp = i2cp->i2c;
  systime_t start, end;
  msg_t msg;

  /* Resetting error flags for this transfer.*/
  i2cp->errors = I2C_NO_ERROR;

  /* Initializes driver fields, LSB = 0 -> transmit.*/
  i2cp->addr = (addr << 1);

  /* Releases the lock from high level driver.*/
  osalSysUnlock();

  /* TX DMA setup.*/
  dmaStreamSetMode(i2cp->dmatx, i2cp->txdmamode);
  dmaStreamSetMemory0(i2cp->dmatx, txbuf);
  dmaStreamSetTransactionSize(i2cp->dmatx, txbytes);

  /* RX DMA setup.*/
  dmaStreamSetMode(i2cp->dmarx, i2cp->rxdmamode);
  dmaStreamSetMemory0(i2cp->dmarx, rxbuf);
  dmaStreamSetTransactionSize(i2cp->dmarx, rxbytes);

  /* Calculating the time window for the timeout on the busy bus condition.*/
  start = osalOsGetSystemTimeX();
  end = osalTimeAddX(start, OSAL_MS2I(GD32_I2C_BUSY_TIMEOUT));

  /* Waits until BUSY flag is reset or, alternatively, for a timeout
     condition.*/
  while (true) {
    osalSysLock();

    /* If the bus is not busy then the operation can continue, note, the
       loop is exited in the locked state.*/
    if (!(dp->STAT1 & I2C_STAT1_I2CBSY) && !(dp->CTL0 & I2C_CTL0_STOP))
      break;

    /* If the system time went outside the allowed window then a timeout
       condition is returned.*/
    if (!osalTimeIsInRangeX(osalOsGetSystemTimeX(), start, end)) {
      dmaStreamDisable(i2cp->dmatx);
      dmaStreamDisable(i2cp->dmarx);
      return MSG_TIMEOUT;
    }

    osalSysUnlock();
  }

  /* Starts the operation.*/
  dp->CTL1 |= I2C_CTL1_EVIE;
  dp->CTL0 |= I2C_CTL0_START;

  /* Waits for the operation completion or a timeout.*/
  msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
  if (msg != MSG_OK) {
    dmaStreamDisable(i2cp->dmatx);
    dmaStreamDisable(i2cp->dmarx);
  }

  return msg;
}
